syntax = "proto3";

import "proc/proc.proto";

option go_package = "sigmaos/uprocsrv/proto";

message RunRequest {
  ProcProto procProto = 1;
}

message RunResult {
}

message AssignRequest {
  string realmStr = 1;
}

message AssignResult {
  bool oK = 1;
}

message CheckpointPidRequest {
  string pidStr = 1;
}

message CheckpointPidResult {
  string checkpointLocation = 1;
  int32 osPid = 2;
}
